change alignment contact sec

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                 <h3>Contact us</h3>
                 <p>If you have any questions, feel free to reach out.</p>
             </div>
-            <div class="section-title", style="width: 50%; text-align: left; margin:10px auto;">
+            <div class="section-title", style="width: 50%; text-align: center; margin:10px auto;">
             <p>Contact (for organisational purposes): <a href="mailto:daniel.rodrigo-albert@npl.co.uk">daniel.rodrigo-albert@npl.co.uk</a></p>
             <p>Venue address: National Physical Laboratory, Hampton Road, Teddington, Middlesex TW11 0LW, UK</p>
             <p>Directions to the venue: <a href="https://www.npl.co.uk/find-us">https://www.npl.co.uk/find-us</a></p>
