--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
             </div>
             <div class="speaker">
                 <div>
-                    <h4>&#8226; Dr. Gian Gentinetta (EPFL Lausanne, Switzerland)</h4>
+                    <h4>&#8226; Mr. Gian Gentinetta (EPFL Lausanne, Switzerland)</h4>
                 </div>
             </div>
             <div class="speaker">
@@ -386,13 +386,13 @@
     <div>
         <h4>Tue 4th Mar</h4>
         <p>09:15 – Intro</p>
-        <p>09:30 – Andrew Green</p>
-        <p>10:30 – Andrew Green</p>
-        <p>11:30 – Lachlan Lindoy</p>
+        <p>09:30 – Andrew Green (University College London)</p>
+        <p>10:30 – Andrew Green (University College London)</p>
+        <p>11:30 – Lachlan Lindoy (National Physical Laboratory)</p>
         <p>12:30 – lunch</p>
-        <p>13:30 – Lachlan Lindoy</p>
-        <p>14:30 – Zlatko Papic</p>
-        <p>15:30 – Zlatko Papic</p>
+        <p>13:30 – Lachlan Lindoy (National Physical Laboratory)</p>
+        <p>14:30 – Zlatko Papic (University of Leeds)</p>
+        <p>15:30 – Zlatko Papic (University of Leeds)</p>
         <p>16:30 – Contributed talks</p>
         <p>17:30 – End of day</p>
     </div>
@@ -404,13 +404,13 @@
     <div>
         <h4>Wed 5th Mar</h4>
         <!-- No entry at 09:15 -->
-        <p>09:30 – Simone Montangero</p>
-        <p>10:30 – Simone Montangero</p>
-        <p>11:30 – Mari Carmen Bañuls</p>
+        <p>09:30 – Patrick Emonts (University of Leiden)</p>
+        <p>10:30 – Patrick Emonts (University of Leiden)</p>
+        <p>11:30 – Mari Carmen Bañuls (Max Planck Institute of Quantum Optics)</p>
         <p>12:30 – lunch</p>
-        <p>13:30 – Mari Carmen Bañuls</p>
-        <p>14:30 – Natalia Chepiga</p>
-        <p>15:30 – Natalia Chepiga</p>
+        <p>13:30 – Mari Carmen Bañuls (Max Planck Institute of Quantum Optics)</p>
+        <p>14:30 – Natalia Chepiga (Delft University of Technology)</p>
+        <p>15:30 – Natalia Chepiga (Delft University of Technology)</p>
         <p>17:00 – Poster session</p>
     </div>
 </div>
@@ -463,16 +463,17 @@
         <div class="container">
             <div class="section-title">
                 <h3>Register Now</h3>
-                <p>Secure your spot at the Quantum Digital Twin Masterclass.</p>
+                <p>Secure your spot at the Quantum Digital Twin Masterclass by completing an Eventbrite forms: 
+                    <a href="https://www.eventbrite.co.uk/e/quantum-digital-twins-masterclass-tickets-1228075570089">eventbrite.co.uk/qdt</a>a</p>
             </div>
-            <form action="#" method="post">
+             <!-- <form action="#" method="post">
                 <input type="text" name="fullname" placeholder="Full Name" required>
                 <input type="email" name="email" placeholder="Email Address" required>
                 <input type="text" name="organization" placeholder="Organization">
                 <textarea name="message" rows="4" placeholder="Any special requirements"></textarea>
                 <textarea name="message" rows="6" placeholder="Please describe your background and motivation for joining the masterclass."></textarea>
                 <button type="submit">Submit Registration</button>
-            </form>
+            </form> -->
         </div>
     </section>
 
