--- a/index.html
+++ b/index.html
@@ -386,13 +386,13 @@
     <div>
         <h4>Tue 4th Mar</h4>
         <p>09:15 – Intro</p>
-        <p>09:30 – Andrew Green (University College London)</p>
-        <p>10:30 – Andrew Green (University College London)</p>
-        <p>11:30 – Lachlan Lindoy (National Physical Laboratory)</p>
+        <p>09:30 – Andrew Green (UCL)</p>
+        <p>10:30 – Andrew Green (UCL)</p>
+        <p>11:30 – Lachlan Lindoy (NPL)</p>
         <p>12:30 – lunch</p>
-        <p>13:30 – Lachlan Lindoy (National Physical Laboratory)</p>
-        <p>14:30 – Zlatko Papic (University of Leeds)</p>
-        <p>15:30 – Zlatko Papic (University of Leeds)</p>
+        <p>13:30 – Lachlan Lindoy (NPL)</p>
+        <p>14:30 – Zlatko Papic (Univ. Leeds)</p>
+        <p>15:30 – Zlatko Papic (Univ. Leeds)</p>
         <p>16:30 – Contributed talks</p>
         <p>17:30 – End of day</p>
     </div>
@@ -404,13 +404,13 @@
     <div>
         <h4>Wed 5th Mar</h4>
         <!-- No entry at 09:15 -->
-        <p>09:30 – Patrick Emonts (University of Leiden)</p>
-        <p>10:30 – Patrick Emonts (University of Leiden)</p>
-        <p>11:30 – Mari Carmen Bañuls (Max Planck Institute of Quantum Optics)</p>
+        <p>09:30 – Patrick Emonts (Univ. Leiden)</p>
+        <p>10:30 – Patrick Emonts (Univ. Leiden)</p>
+        <p>11:30 – Mari Carmen Bañuls (MPI)</p>
         <p>12:30 – lunch</p>
-        <p>13:30 – Mari Carmen Bañuls (Max Planck Institute of Quantum Optics)</p>
-        <p>14:30 – Natalia Chepiga (Delft University of Technology)</p>
-        <p>15:30 – Natalia Chepiga (Delft University of Technology)</p>
+        <p>13:30 – Mari Carmen Bañuls (MPI)</p>
+        <p>14:30 – Natalia Chepiga (TU Delft)</p>
+        <p>15:30 – Natalia Chepiga (TU Delft)</p>
         <p>17:00 – Poster session</p>
     </div>
 </div>
@@ -464,7 +464,7 @@
             <div class="section-title">
                 <h3>Register Now</h3>
                 <p>Secure your spot at the Quantum Digital Twin Masterclass by completing an Eventbrite forms: 
-                    <a href="https://www.eventbrite.co.uk/e/quantum-digital-twins-masterclass-tickets-1228075570089">eventbrite.co.uk/qdt</a>a</p>
+                    <a href="https://www.eventbrite.co.uk/e/quantum-digital-twins-masterclass-tickets-1228075570089" target=”_blank”>eventbrite.co.uk/qdt</a></p>
             </div>
              <!-- <form action="#" method="post">
                 <input type="text" name="fullname" placeholder="Full Name" required>
