--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="container">
             <div class="section-title">
                 <h3>About the Masterclass</h3>
-                <p>Discover the latest advancements in Quantum Digital Twin technology and its applications across various industries.</p>
+                <h>Discover the latest advancements in Quantum Digital Twin technology and its applications across various industries.</p>
             </div>
             <p>&nbsp;</p>
             <p>
@@ -463,8 +463,8 @@
         <div class="container">
             <div class="section-title">
                 <h3>Register Now</h3>
-                <p>Secure your spot at the Quantum Digital Twin Masterclass by completing an Eventbrite forms: 
-                    <a href="https://www.eventbrite.co.uk/e/quantum-digital-twins-masterclass-tickets-1228075570089" target=”_blank”>eventbrite.co.uk/qdt</a></p>
+                <h4>Secure your spot at the Quantum Digital Twin Masterclass by completing an Eventbrite form following the link: 
+                    <a href="https://www.eventbrite.co.uk/e/quantum-digital-twins-masterclass-tickets-1228075570089" target=”_blank”>eventbrite.co.uk/qdt</a></h4>
             </div>
              <!-- <form action="#" method="post">
                 <input type="text" name="fullname" placeholder="Full Name" required>
