--- a/index.html
+++ b/index.html
@@ -421,17 +421,17 @@
     <div>
         <h4>Thu 6th Mar</h4>
         <p>09:15 – Intro</p>
-        <p>09:30 – Frank Verstraete</p>
-        <p>10:10 – Yaroslav Herasymenko</p>
+        <p>09:30 – Frank Verstraete (Univ. Cambridge)</p>
+        <p>10:10 – Yaroslav Herasymenko (TU Delft)</p>
         <p>10:50 – Coffee break</p>
-        <p>11:20 – Francois Jamet</p>
-        <p>12:00 – Gian Gentinetta</p>
+        <p>11:20 – Francois Jamet (Alice and Bob)</p>
+        <p>12:00 – Gian Gentinetta (EPFL)</p>
         <p>12:40 – Lunch</p>
-        <p>13:40 – Sougato Bose</p>
-        <p>14:20 – Animesh Datta</p>
+        <p>13:40 – Sougato Bose (UCL)</p>
+        <p>14:20 – Animesh Datta (Univ. Warwick)</p>
         <p>15:00 – Coffee break</p>
-        <p>15:30 – Pauline Besserve</p>
-        <p>16:10 – TBD</p>
+        <p>15:30 – Pauline Besserve (QSL, Univ. Edinburgh)</p>
+        <p>16:10 – Nick Blunt (Riverlane)</p>
         <p>16:50 – end of day</p>
         <p>19:30 – conference dinner</p>
     </div>
@@ -442,16 +442,16 @@
     <img src="day-icon-4.png" alt="Friday 7th Mar">
     <div>
         <h4>Fri 7th Mar</h4>
-        <p>09:30 – George Booth</p>
-        <p>10:10 – Nathan Fitzpatrick</p>
+        <p>09:30 – George Booth (KCL)</p>
+        <p>10:10 – Nathan Fitzpatrick (Riverlane)</p>
         <p>10:50 – Coffee break</p>
-        <p>11:20 – Fedor Simkovic</p>
-        <p>12:00 – Eric Jones</p>
-        <p>13:40 – Alberto Baiardi</p>
-        <p>14:20 – Constantin Dalyac</p>
+        <p>11:20 – P.V. Sriluckshmy (IQM)</p>
+        <p>12:00 – Eric Jones (Infleqtion)</p>
+        <p>13:40 – Alberto Baiardi (IBM Zurich)</p>
+        <p>14:20 – Constantin Dalyac (Pasqal)</p>
         <p>15:00 – Coffee break</p>
-        <p>15:30 – Werner Dobrautz</p>
-        <p>16:10 – Gianluca Anselmetti</p>
+        <p>15:30 – Werner Dobrautz (TU Dortmund)</p>
+        <p>16:10 – Gianluca Anselmetti (Boehringer Ingelheim)</p>
         <p>16:40 – end of the masterclass</p>
     </div>
 </div>
