--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             </div>
             <div class="speaker">
                 <div>
-                    <h4>&#8226; Prof. Andrew Daley (Univ. Oxford, UK; to be confirmed)</h4>
+                    <h4>&#8226; Dr. Nick Blunt (Riverlane, UK)</h4>
                 </div>
             </div>
             <div class="speaker">
@@ -445,12 +445,12 @@
         <p>09:30 – George Booth (KCL)</p>
         <p>10:10 – Nathan Fitzpatrick (Riverlane)</p>
         <p>10:50 – Coffee break</p>
-        <p>11:20 – P.V. Sriluckshmy (IQM)</p>
+        <p>11:20 – Werner Dobrautz (HZDR and TU Dresden)</p>
         <p>12:00 – Eric Jones (Infleqtion)</p>
         <p>13:40 – Alberto Baiardi (IBM Zurich)</p>
         <p>14:20 – Constantin Dalyac (Pasqal)</p>
         <p>15:00 – Coffee break</p>
-        <p>15:30 – Werner Dobrautz (TU Dortmund)</p>
+        <p>15:30 – P.V. Sriluckshmy (IQM)</p>
         <p>16:10 – Gianluca Anselmetti (Boehringer Ingelheim)</p>
         <p>16:40 – end of the masterclass</p>
     </div>
