--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <div class="container">
             <img src="qdt-masterclass-v2.png" alt="Quantum Digital Twin Masterclass">
             <h2>Quantum Simulators and Quantum Digital Twins: The Masterclass</h2>
-            <p>Join us at the National Physical Laboratory on <b></b>March 4-7, 2025</b>, at the Bushy House.</p>
+            <p>Join us at the National Physical Laboratory on <b></b>March 4-7, 2025</b>, at Bushy House.</p>
             <a href="#registration">Register Now</a>
         </div>
     </section>
@@ -222,7 +222,7 @@
             </p>
             <p>&nbsp;</p>
             <h4>Dates and time: 09:00 - 17:00, Tuesday 04 March - Friday 07 March 2025</h4>
-            <h4>Venue: The Bushy House, NPL, Tenddington (London area)</h4>
+            <h4>Venue: Bushy House, NPL, Teddington (London area)</h4>
             <h4>Dinner: to be confirmed.</h4>
             <p>&nbsp;</p>
             <p>
@@ -270,14 +270,14 @@
                 <img src="speaker-icon.png" alt="Lecturer">
                 <div>
                     <h4>Prof. Mari Carmen Banuls (TU Munich, Germany)</h4>
-                    <p>To be confirmed.</p>
+                    <p>Title to be decided.</p>
                 </div>
             </div>
             <div class="lecturer">
                 <img src="speaker-icon.png" alt="Lecturer">
                 <div>
-                    <h4>[TBC] Prof. Simone Montangero (University of Padova, Italy)</h4>
-                    <p>To be confirmed.</p>
+                    <h4>Dr. Patrick Emonts (University of Leiden, The Netherlands)</h4>
+                    <p>Title to be decided.</p>
                 </div>
             </div>
         </div>
@@ -302,7 +302,7 @@
             </div>
             <div class="speaker">
                 <div>
-                    <h4>&#8226; Dr. Fedor Simkovic (IQM, Germany)</h4>
+                    <h4>&#8226; Dr. P.V. Sriluckshmy (IQM, Germany)</h4>
                 </div>
             </div>
             <div class="speaker">
