--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
             </div>
             <div class="speaker">
                 <div>
-                    <h4>&#8226; Dr. Francois Jamet (Alice and Bob, France)</h4>
+                    <h4>&#8226; Dr. Francois Jamet (Alice &#38; Bob, France)</h4>
                 </div>
             </div>
         </div>
@@ -424,7 +424,7 @@
         <p>09:30 – Frank Verstraete (Univ. Cambridge)</p>
         <p>10:10 – Yaroslav Herasymenko (TU Delft)</p>
         <p>10:50 – Coffee break</p>
-        <p>11:20 – Francois Jamet (Alice and Bob)</p>
+        <p>11:20 – Francois Jamet (Alice &#38; Bob)</p>
         <p>12:00 – Gian Gentinetta (EPFL)</p>
         <p>12:40 – Lunch</p>
         <p>13:40 – Sougato Bose (UCL)</p>
@@ -476,6 +476,56 @@
             </form> -->
         </div>
     </section>
+
+    <!-- Speakers Section -->
+    <section id="speakers" class="speakers">
+        <div class="container">
+            <div class="section-title">
+                <h3>Organisers:</h3>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>&#8226; Mr. Daniel Rodrigo-Albert (NPL, UK; scientific secretary)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>&#8226; Prof. Oleksandr Kyriienko (Univ. Sheffield &#38; Univ. Exeter, UK)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>&#8226; Prof. Ivan Rungger (NPL, UK)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>&#8226; Dr. Fedor Šimkovic (IQM, Germany)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>&#8226; Dr. Yannic Rath (NPL, UK)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>&#8226; Dr. Madhumita Sarkar (Univ. Exeter, UK)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>&#8226; Dr. Lachlan Lindoy (NPL, UK)</h4>
+                </div>
+            </div>
+            <div class="speaker">
+                <div>
+                    <h4>&#8226; Mr. Chukwudubem Umeano (Univ. Exeter, UK)</h4>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
