--- a/index.html
+++ b/index.html
@@ -226,8 +226,13 @@
             <h4>Dinner: to be confirmed.</h4>
             <p>&nbsp;</p>
             <p>
-                The tentative programme for the event is to be finalised. Below we list of lecturers for the masterclass and invited speakers.
+                The tentative programme for the event is presented below, listing the lecturers for the masterclass and invited speakers. 
             </p>
+            <p>
+            The QDT Masterclass event is organised jointly by the National Physical Laboratory, the University of Exeter, and IQM Quantum Computers.
+                The full list of organisers is provided below &mdash; do get in touch with us if there are any queries.
+            </p>
+            <p>&nbsp;</p>
         </div>
     </section>
 
