--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
             <p>
                 The tentative programme for the event is presented below, listing the lecturers for the masterclass and invited speakers. 
             </p>
+            <p>&nbsp;</p>
             <p>
             The QDT Masterclass event is organised jointly by the National Physical Laboratory, the University of Exeter, and IQM Quantum Computers.
                 The full list of organisers is provided below &mdash; do get in touch with us if there are any queries.
