--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
     <div>
         <h4>Fri 7th Mar</h4>
         <p>09:30 – George Booth (KCL)</p>
-        <p>10:10 – Nathan Fitzpatrick (Riverlane)</p>
+        <p>10:10 – Nathan Fitzpatrick (Quantinuum)</p>
         <p>10:50 – Coffee break</p>
         <p>11:20 – Werner Dobrautz (HZDR and TU Dresden)</p>
         <p>12:00 – Eric Jones (Infleqtion)</p>
