--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
     <img src="day-icon-4.png" alt="Friday 7th Mar">
     <div>
         <h4>Fri 7th Mar</h4>
-        <p>09:30 – George Booth (KCL)</p>
+        <p>09:30 – George Booth (KCL): "Improved measurement strategy for coupling quantum and classical for electronic structure"</p>
         <p>10:10 – Nathan Fitzpatrick (Quantinuum)</p>
         <p>10:50 – Coffee break</p>
         <p>11:20 – Werner Dobrautz (HZDR and TU Dresden)</p>
