--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             }
             .speakers .speaker, .schedule .event {
                 flex-direction: column;
-                text-align: center;
+                text-align: left;
             }
             .speakers .speaker img, .schedule .event img {
                 margin: 0 0 10px 0;
