--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
             object-fit: contain; /* Ensures the image fits within the container */
         }
         .speakers .speaker, .schedule .event {
-            text-align: center;
+            text-align: left;
             display: flex;
-            align-items: center;
+            align-items: left;
             margin-bottom: 20px;
             margin-left: 33%;
         }
         .speakers .speaker img, .schedule .event img {
-            text-align: center;
+            text-align: left;
             width: auto; /* Automatically adjusts width */
             height: 40px; /* Adjusts the height to a small, fixed size */
             max-height: 40px; /* Ensures height doesn't exceed the set size */
