--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
             object-fit: contain; /* Ensures the image fits within the container */
         }
         .speakers .speaker, .schedule .event {
-            text-align: left;
+            text-align: center;
             display: flex;
-            align-items: left;
+            align-items: center;
             margin-bottom: 20px;
-            margin-left: 33%;
+            margin-left: 10%;
         }
         .speakers .speaker img, .schedule .event img {
-            text-align: left;
+            text-align: center;
             width: auto; /* Automatically adjusts width */
             height: 40px; /* Adjusts the height to a small, fixed size */
             max-height: 40px; /* Ensures height doesn't exceed the set size */
@@ -166,7 +166,7 @@
             }
             .speakers .speaker, .schedule .event {
                 flex-direction: column;
-                text-align: left;
+                text-align: center;
             }
             .speakers .speaker img, .schedule .event img {
                 margin: 0 0 10px 0;
