--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
             <div class="lecturer">
                 <img src="speaker-icon.png" alt="Lecturer">
                 <div>
-                    <h4>Prof. Natalia Chepiga (TU Delft, The Netherlands)</h4>
-                    <p>Introduction to tensor network methods for condensed matter systems</p>
+                    <h4>Prof. Andrew Green (University College London, UK)</h4>
+                    <p>Quantum computing and circuit simulation methods inspired by tensor networks</p>
                 </div>
             </div>
             <div class="lecturer">
@@ -258,13 +258,7 @@
                     <p>Tensor networks for simulating dynamical systems</p>
                 </div>
             </div>
-            <div class="lecturer">
-                <img src="speaker-icon.png" alt="Lecturer">
-                <div>
-                    <h4>Prof. Andrew Green (University College London, UK)</h4>
-                    <p>Quantum computing and circuit simulation methods inspired by tensor networks</p>
-                </div>
-            </div>
+            
             <div class="lecturer">
                 <img src="speaker-icon.png" alt="Lecturer">
                 <div>
@@ -284,6 +278,13 @@
                 <div>
                     <h4>Dr. Patrick Emonts (University of Leiden, The Netherlands)</h4>
                     <p>Title to be decided.</p>
+                </div>
+            </div>
+            <div class="lecturer">
+                <img src="speaker-icon.png" alt="Lecturer">
+                <div>
+                    <h4>Prof. Natalia Chepiga (TU Delft, The Netherlands)</h4>
+                    <p>Constrained tensor networks (topics include: quantum dimer and quantum loop models, Rydberg atom simulators, non-conformal phase transitions, Kibble-Zurek dynamics)</p>
                 </div>
             </div>
         </div>
@@ -392,13 +393,13 @@
     <div>
         <h4>Tue 4th Mar</h4>
         <p>09:15 – Intro</p>
-        <p>09:30 – Andrew Green (UCL)</p>
-        <p>10:30 – Andrew Green (UCL)</p>
-        <p>11:30 – Lachlan Lindoy (NPL)</p>
+        <p>09:30 – Andrew Green (UCL): "Tensor networks for quantum computing"</p>
+        <p>10:30 – Andrew Green (UCL): "Tensor networks for quantum computing"</p>
+        <p>11:30 – Lachlan Lindoy (NPL): "PyTTN: Hands-on for tree tensor networks"</p>
         <p>12:30 – lunch</p>
-        <p>13:30 – Lachlan Lindoy (NPL)</p>
-        <p>14:30 – Zlatko Papic (Univ. Leeds)</p>
-        <p>15:30 – Zlatko Papic (Univ. Leeds)</p>
+        <p>13:30 – Lachlan Lindoy (NPL): "PyTTN: Hands-on for tree tensor networks"</p>
+        <p>14:30 – Zlatko Papic (Univ. Leeds): "Matrix product states for simulating spin systems"</p>
+        <p>15:30 – Zlatko Papic (Univ. Leeds): "Matrix product states for simulating spin systems"</p>
         <p>16:30 – Contributed talks</p>
         <p>17:30 – End of day</p>
     </div>
@@ -415,8 +416,8 @@
         <p>11:30 – Mari Carmen Bañuls (MPI)</p>
         <p>12:30 – lunch</p>
         <p>13:30 – Mari Carmen Bañuls (MPI)</p>
-        <p>14:30 – Natalia Chepiga (TU Delft)</p>
-        <p>15:30 – Natalia Chepiga (TU Delft)</p>
+        <p>14:30 – Natalia Chepiga (TU Delft): "Constrained tensor networks"</p>
+        <p>15:30 – Natalia Chepiga (TU Delft): "Constrained tensor networks"</p>
         <p>17:00 – Poster session</p>
     </div>
 </div>
