--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             </p>
             <p>&nbsp;</p>
             <p>
-            The QDT Masterclass event is organised jointly by the National Physical Laboratory, the University of Exeter, and IQM Quantum Computers.
+            The QDT Masterclass event is organised jointly by the <b>National Physical Laboratory</b>, the <b>University of Exeter</b>, and <b>IQM Quantum Computers</b>.
                 The full list of organisers is provided below &mdash; do get in touch with us if there are any queries.
             </p>
             <p>&nbsp;</p>
