--- a/index.html
+++ b/index.html
@@ -431,13 +431,13 @@
         <p>09:30 – Frank Verstraete (Univ. Cambridge)</p>
         <p>10:10 – Yaroslav Herasymenko (TU Delft)</p>
         <p>10:50 – Coffee break</p>
-        <p>11:20 – Francois Jamet (Alice &#38; Bob)</p>
+        <p>11:20 – Francois Jamet (Alice &#38; Bob): "Anderson impurity model solver integrating tensor network methods with quantum computing"</p>
         <p>12:00 – Gian Gentinetta (EPFL)</p>
         <p>12:40 – Lunch</p>
         <p>13:40 – Sougato Bose (UCL)</p>
-        <p>14:20 – Animesh Datta (Univ. Warwick)</p>
+        <p>14:20 – Animesh Datta (Univ. Warwick): "Verification of Quantum Computation & Simulation"</p>
         <p>15:00 – Coffee break</p>
-        <p>15:30 – Pauline Besserve (QSL, Univ. Edinburgh)</p>
+        <p>15:30 – Gianluca Anselmetti (Boehringer Ingelheim)</p>
         <p>16:10 – Nick Blunt (Riverlane)</p>
         <p>16:50 – end of day</p>
         <p>19:30 – conference dinner</p>
@@ -450,15 +450,15 @@
     <div>
         <h4>Fri 7th Mar</h4>
         <p>09:30 – George Booth (KCL): "Improved measurement strategy for coupling quantum and classical for electronic structure"</p>
-        <p>10:10 – Nathan Fitzpatrick (Quantinuum)</p>
+        <p>10:10 – Nathan Fitzpatrick (Quantinuum): "Spin-adapted electronic structure on quantum computers"</p>
         <p>10:50 – Coffee break</p>
         <p>11:20 – Werner Dobrautz (HZDR and TU Dresden)</p>
-        <p>12:00 – Eric Jones (Infleqtion)</p>
+        <p>12:00 – Eric Jones (Infleqtion): "Fault-Tolerant Operation and Materials Science with Neutral Atom Logical Qubits”</p>
         <p>13:40 – Alberto Baiardi (IBM Zurich)</p>
-        <p>14:20 – Constantin Dalyac (Pasqal)</p>
+        <p>14:20 – Joseph Vovrosh (Pasqal)</p>
         <p>15:00 – Coffee break</p>
-        <p>15:30 – P.V. Sriluckshmy (IQM)</p>
-        <p>16:10 – Gianluca Anselmetti (Boehringer Ingelheim)</p>
+        <p>15:30 – TBD</p>
+        <p>16:10 – P.V. Sriluckshmy (IQM)</p>
         <p>16:40 – end of the masterclass</p>
     </div>
 </div>
