--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 <img src="speaker-icon.png" alt="Lecturer">
                 <div>
                     <h4>Prof. Zlatko Papic (University of Leeds, UK)</h4>
-                    <p>Tensor networks for simulating dynamical systems</p>
+                    <p>Quantum many-body dynamics: thermalisation and its violations from an entanglement perspective</p>
                 </div>
             </div>
             
@@ -324,7 +324,7 @@
             </div>
             <div class="speaker">
                 <div>
-                    <h4>&#8226; Dr. Constantin Dalyac (Pasqal, France)</h4>
+                    <h4>&#8226; Dr. Joseph Vovrosh (Pasqal, France)</h4>
                 </div>
             </div>
             <div class="speaker">
@@ -359,7 +359,7 @@
             </div>
             <div class="speaker">
                 <div>
-                    <h4>&#8226; Dr. Gianluca Anselmetti (Boehringer Ingelheim, Germany)</h4>
+                    <h4>&#8226; Dr. Gian-Luca Romano Anselmetti (Boehringer Ingelheim, Germany)</h4>
                 </div>
             </div>
             <div class="speaker">
@@ -367,11 +367,11 @@
                     <h4>&#8226; Dr. Werner Dobrautz (HZDR and TU Dresden)</h4>
                 </div>
             </div>
-            <div class="speaker">
+            <!-- <div class="speaker">
                 <div>
                     <h4>&#8226; Dr. Pauline Besserve (Quantum Software Lab, Univ. Edinburgh, UK)</h4>
                 </div>
-            </div>
+            </div> -->
             <div class="speaker">
                 <div>
                     <h4>&#8226; Dr. Francois Jamet (Alice &#38; Bob, France)</h4>
@@ -398,8 +398,8 @@
         <p>11:30 – Lachlan Lindoy (NPL): "PyTTN: Hands-on for tree tensor networks"</p>
         <p>12:30 – lunch</p>
         <p>13:30 – Lachlan Lindoy (NPL): "PyTTN: Hands-on for tree tensor networks"</p>
-        <p>14:30 – Zlatko Papic (Univ. Leeds): "Matrix product states for simulating spin systems"</p>
-        <p>15:30 – Zlatko Papic (Univ. Leeds): "Matrix product states for simulating spin systems"</p>
+        <p>14:30 – Zlatko Papic (Univ. Leeds): "Quantum many-body dynamics: thermalisation and its violations from an entanglement perspective"</p>
+        <p>15:30 – Zlatko Papic (Univ. Leeds): "Quantum many-body dynamics: thermalisation and its violations from an entanglement perspective"</p>
         <p>16:30 – Contributed talks</p>
         <p>17:30 – End of day</p>
     </div>
@@ -437,7 +437,7 @@
         <p>13:40 – Sougato Bose (UCL)</p>
         <p>14:20 – Animesh Datta (Univ. Warwick): "Verification of Quantum Computation & Simulation"</p>
         <p>15:00 – Coffee break</p>
-        <p>15:30 – Gianluca Anselmetti (Boehringer Ingelheim)</p>
+        <p>15:30 – Gian-Luca Romano Anselmetti (Boehringer Ingelheim)</p>
         <p>16:10 – Nick Blunt (Riverlane)</p>
         <p>16:50 – end of day</p>
         <p>19:30 – conference dinner</p>
