--- a/index.html
+++ b/index.html
@@ -411,8 +411,8 @@
     <div>
         <h4>Wed 5th Mar</h4>
         <!-- No entry at 09:15 -->
-        <p>09:30 – Patrick Emonts (Univ. Leiden)</p>
-        <p>10:30 – Patrick Emonts (Univ. Leiden)</p>
+        <p>09:30 – Patrick Emonts (Univ. Leiden): "Parent Hamiltonians and how to optimize them"</p>
+        <p>10:30 – Patrick Emonts (Univ. Leiden): "Parent Hamiltonians and how to optimize them"</p>
         <p>11:30 – Mari Carmen Bañuls (MPI)</p>
         <p>12:30 – lunch</p>
         <p>13:30 – Mari Carmen Bañuls (MPI)</p>
