--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
         <p>13:40 – Sougato Bose (UCL)</p>
         <p>14:20 – Animesh Datta (Univ. Warwick): "Verification of Quantum Computation & Simulation"</p>
         <p>15:00 – Coffee break</p>
-        <p>15:30 – Gian-Luca Romano Anselmetti (Boehringer Ingelheim)</p>
+        <p>15:30 – Gian-Luca Romano Anselmetti (Boehringer Ingelheim): "Drug design on quantum computers"</p>
         <p>16:10 – Nick Blunt (Riverlane)</p>
         <p>16:50 – end of day</p>
         <p>19:30 – conference dinner</p>
