--- a/index.html
+++ b/index.html
@@ -269,15 +269,15 @@
             <div class="lecturer">
                 <img src="speaker-icon.png" alt="Lecturer">
                 <div>
-                    <h4>Prof. Mari Carmen Banuls (TU Munich, Germany)</h4>
-                    <p>Title to be decided.</p>
+                    <h4>Dr. Juraj Hasik (University of Zurich, Switzerland)</h4>
+                    <p>Projected entagled-pair states and PEPS-based algorithms</p>
                 </div>
             </div>
             <div class="lecturer">
                 <img src="speaker-icon.png" alt="Lecturer">
                 <div>
                     <h4>Dr. Patrick Emonts (University of Leiden, The Netherlands)</h4>
-                    <p>Title to be decided.</p>
+                    <p>Parent Hamiltonians and how to optimize them</p>
                 </div>
             </div>
             <div class="lecturer">
@@ -413,9 +413,9 @@
         <!-- No entry at 09:15 -->
         <p>09:30 – Patrick Emonts (Univ. Leiden): "Parent Hamiltonians and how to optimize them"</p>
         <p>10:30 – Patrick Emonts (Univ. Leiden): "Parent Hamiltonians and how to optimize them"</p>
-        <p>11:30 – Mari Carmen Bañuls (MPI)</p>
+        <p>11:30 – Juraj Hasik (Univ. Zurich): "Projected entagled-pair states and PEPS-based algorithms"</p>
         <p>12:30 – lunch</p>
-        <p>13:30 – Mari Carmen Bañuls (MPI)</p>
+        <p>13:30 – Juraj Hasik (Univ. Zurich): "Projected entagled-pair states and PEPS-based algorithms"</p>
         <p>14:30 – Natalia Chepiga (TU Delft): "Constrained tensor networks"</p>
         <p>15:30 – Natalia Chepiga (TU Delft): "Constrained tensor networks"</p>
         <p>17:00 – Poster session</p>
