--- a/index.html
+++ b/index.html
@@ -367,11 +367,11 @@
                     <h4>&#8226; Dr. Werner Dobrautz (HZDR and TU Dresden)</h4>
                 </div>
             </div>
-            <!-- <div class="speaker">
+            <div class="speaker">
                 <div>
                     <h4>&#8226; Dr. Pauline Besserve (Quantum Software Lab, Univ. Edinburgh, UK)</h4>
                 </div>
-            </div> -->
+            </div>
             <div class="speaker">
                 <div>
                     <h4>&#8226; Dr. Francois Jamet (Alice &#38; Bob, France)</h4>
@@ -453,7 +453,7 @@
         <p>10:10 – Nathan Fitzpatrick (Quantinuum): "Spin-adapted electronic structure on quantum computers"</p>
         <p>10:50 – Coffee break</p>
         <p>11:20 – Werner Dobrautz (HZDR and TU Dresden)</p>
-        <p>12:00 – TBD</p>
+        <p>12:00 – Pauline Besserve (QSL, Edinburgh): "Dynamical Mean-Field Theory on noisy quantum computers"</p>
         <p>13:40 – Alberto Baiardi (IBM Zurich)</p>
         <p>14:20 – Joseph Vovrosh (Pasqal)</p>
         <p>15:00 – Coffee break</p>
