--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
         <p>09:30 – George Booth (KCL): "Improved measurement strategy for coupling quantum and classical for electronic structure"</p>
         <p>10:10 – Nathan Fitzpatrick (Quantinuum): "Spin-adapted electronic structure on quantum computers"</p>
         <p>10:50 – Coffee break</p>
-        <p>11:20 – Werner Dobrautz (HZDR and TU Dresden)</p>
+        <p>11:20 – Werner Dobrautz (HZDR and TU Dresden): "Reducing the Quantum Circuit Footprint for Noise-Resilient Quantum Chemistry via Transcorrelation and Adaptive Circuit Ansätze"</p>
         <p>12:00 – Pauline Besserve (QSL, Edinburgh): "Dynamical Mean-Field Theory on noisy quantum computers"</p>
         <p>13:40 – Alberto Baiardi (IBM Zurich)</p>
         <p>14:20 – Joseph Vovrosh (Pasqal)</p>
