--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
             </p>
             <p>&nbsp;</p>
             <h4>Dates and time: 09:00 - 17:00, Tuesday 04 March - Friday 07 March 2025</h4>
-            <h4>Venue: Bushy House, NPL, Teddington (London area)</h4>
-            <h4>Dinner: to be confirmed.</h4>
+            <h4>Venue: Bushy House, NPL, <a href="https://maps.app.goo.gl/rMxo1TTkafcq7vrj7" target="_blank">Teddington</a> (London area)</h4>
+            <h4>Dinner [tentative]: The King's Head, <a href="https://maps.app.goo.gl/RRRqYLNsUUd3CChN6" target="_blank">Teddington</a>, Thu 6th Mar at 19:00.</h4>
             <p>&nbsp;</p>
             <p>
                 The tentative programme for the event is presented below, listing the lecturers for the masterclass and invited speakers. 
@@ -440,7 +440,7 @@
         <p>15:30 – Gian-Luca Romano Anselmetti (Boehringer Ingelheim): "Drug design on quantum computers"</p>
         <p>16:10 – Nick Blunt (Riverlane)</p>
         <p>16:50 – end of day</p>
-        <p>19:30 – conference dinner</p>
+        <p>19:00 – conference dinner</p>
     </div>
 </div>
 
