--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                 <img src="speaker-icon.png" alt="Lecturer">
                 <div>
                     <h4>Prof. Natalia Chepiga (TU Delft, The Netherlands)</h4>
-                    <p>Constrained tensor networks (topics include: quantum dimer and quantum loop models, Rydberg atom simulators, non-conformal phase transitions, Kibble-Zurek dynamics)</p>
+                    <p>Constrained tensor networks and what you can do with them</p>
                 </div>
             </div>
         </div>
@@ -416,8 +416,8 @@
         <p>11:30 – Juraj Hasik (Univ. Zurich): "Projected entagled-pair states and PEPS-based algorithms"</p>
         <p>12:30 – lunch</p>
         <p>13:30 – Juraj Hasik (Univ. Zurich): "Projected entagled-pair states and PEPS-based algorithms"</p>
-        <p>14:30 – Natalia Chepiga (TU Delft): "Constrained tensor networks"</p>
-        <p>15:30 – Natalia Chepiga (TU Delft): "Constrained tensor networks"</p>
+        <p>14:30 – Natalia Chepiga (TU Delft): "Constrained tensor networks and what you can do with them"</p>
+        <p>15:30 – Natalia Chepiga (TU Delft): "Constrained tensor networks and what you can do with them"</p>
         <p>17:00 – Poster session</p>
     </div>
 </div>
