--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
         <p>10:10 – Yaroslav Herasymenko (TU Delft)</p>
         <p>10:50 – Coffee break</p>
         <p>11:20 – Francois Jamet (Alice &#38; Bob): "Anderson impurity model solver integrating tensor network methods with quantum computing"</p>
-        <p>12:00 – Gian Gentinetta (EPFL)</p>
+        <p>12:00 – Gian Gentinetta (EPFL): "Hybrid quantum-classical ansätze for quantum simulation"</p>
         <p>12:40 – Lunch</p>
         <p>13:40 – Sougato Bose (UCL)</p>
         <p>14:20 – Animesh Datta (Univ. Warwick): "Verification of Quantum Computation & Simulation"</p>
