--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         <h4>Thu 6th Mar</h4>
         <p>09:15 – Intro</p>
         <p>09:30 – Frank Verstraete (Univ. Cambridge)</p>
-        <p>10:10 – Yaroslav Herasymenko (TU Delft)</p>
+        <p>10:10 – Yaroslav Herasymenko (TU Delft): "Solving Free Fermion Problems on a Quantum Computer"</p>
         <p>10:50 – Coffee break</p>
         <p>11:20 – Francois Jamet (Alice &#38; Bob): "Anderson impurity model solver integrating tensor network methods with quantum computing"</p>
         <p>12:00 – Gian Gentinetta (EPFL): "Hybrid quantum-classical ansätze for quantum simulation"</p>
@@ -438,7 +438,7 @@
         <p>14:20 – Animesh Datta (Univ. Warwick): "Verification of Quantum Computation & Simulation"</p>
         <p>15:00 – Coffee break</p>
         <p>15:30 – Gian-Luca Romano Anselmetti (Boehringer Ingelheim): "Drug design on quantum computers"</p>
-        <p>16:10 – Nick Blunt (Riverlane)</p>
+        <p>16:10 – Nick Blunt (Riverlane): "Fault-tolerant quantum simulation of generalized Hubbard models"</p>
         <p>16:50 – end of day</p>
         <p>19:00 – conference dinner</p>
     </div>
@@ -454,7 +454,7 @@
         <p>10:50 – Coffee break</p>
         <p>11:20 – Werner Dobrautz (HZDR and TU Dresden): "Reducing the Quantum Circuit Footprint for Noise-Resilient Quantum Chemistry via Transcorrelation and Adaptive Circuit Ansätze"</p>
         <p>12:00 – Pauline Besserve (QSL, Edinburgh): "Dynamical Mean-Field Theory on noisy quantum computers"</p>
-        <p>13:40 – Alberto Baiardi (IBM Zurich)</p>
+        <p>13:40 – Alberto Baiardi (IBM Zurich): "Tensor Network-based Methods for Quantum Computing"</p>
         <p>14:20 – Joseph Vovrosh (Pasqal)</p>
         <p>15:00 – Coffee break</p>
         <p>15:30 – P.V. Sriluckshmy (IQM)</p>
