--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             </div>
             <div class="speaker">
                 <div>
-                    <h4>&#8226; Dr. Yaroslav Herasymenko (TU Delft, The Netherlands)</h4>
+                    <h4>&#8226; Dr. Yaroslav Herasymenko (QuSoft, CWI, The Netherlands)</h4>
                 </div>
             </div>
             <div class="speaker">
@@ -429,12 +429,12 @@
         <h4>Thu 6th Mar</h4>
         <p>09:15 – Intro</p>
         <p>09:30 – Frank Verstraete (Univ. Cambridge)</p>
-        <p>10:10 – Yaroslav Herasymenko (TU Delft): "Solving Free Fermion Problems on a Quantum Computer"</p>
+        <p>10:10 – Yaroslav Herasymenko (QuSoft): "Solving Free Fermion Problems on a Quantum Computer"</p>
         <p>10:50 – Coffee break</p>
         <p>11:20 – Francois Jamet (Alice &#38; Bob): "Anderson impurity model solver integrating tensor network methods with quantum computing"</p>
         <p>12:00 – Gian Gentinetta (EPFL): "Hybrid quantum-classical ansätze for quantum simulation"</p>
         <p>12:40 – Lunch</p>
-        <p>13:40 – Sougato Bose (UCL)</p>
+        <p>13:40 – Sougato Bose (UCL): "Exploiting Many-Body Dynamics for Quantum Computation"</p>
         <p>14:20 – Animesh Datta (Univ. Warwick): "Verification of Quantum Computation & Simulation"</p>
         <p>15:00 – Coffee break</p>
         <p>15:30 – Gian-Luca Romano Anselmetti (Boehringer Ingelheim): "Drug design on quantum computers"</p>
