--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
             line-height: 1.6;
             color: #333;
         }
+        .logo-container {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            padding: 20px 0;
+        }
+        .logo-container img {
+            max-width: 200px;
+           
         header {
             background-color: #004080;
             color: #fff;
@@ -289,7 +298,14 @@
             </div>
         </div>
     </section>
-    
+
+<!-- Logo Section -->
+    <section class="logo-container">
+        <img src="IQM-logo-black.png" alt="IQM Quantum Computers">
+        <img src="ukri_epsr_logo.png" alt="UKRI EPSRC">
+        <img src="NPL_logo.png" alt="National Physical Laboratory">
+    </section>
+
 <!-- Speakers Section -->
     <section id="speakers" class="speakers">
         <div class="container">
