--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
         <p>11:20 – Werner Dobrautz (HZDR and TU Dresden): "Reducing the Quantum Circuit Footprint for Noise-Resilient Quantum Chemistry via Transcorrelation and Adaptive Circuit Ansätze"</p>
         <p>12:00 – Pauline Besserve (QSL, Edinburgh): "Dynamical Mean-Field Theory on noisy quantum computers"</p>
         <p>13:40 – Alberto Baiardi (IBM Zurich): "Tensor Network-based Methods for Quantum Computing"</p>
-        <p>14:20 – Joseph Vovrosh (Pasqal)</p>
+        <p>14:20 – Joseph Vovrosh (Pasqal): "Neutral atom quantum processing units: a versatile platform for quantum simulation"</p>
         <p>15:00 – Coffee break</p>
         <p>15:30 – P.V. Sriluckshmy (IQM)</p>
         <p>16:10 – Eric Jones (Infleqtion): "Fault-Tolerant Operation and Materials Science with Neutral Atom Logical Qubits”</p>
