--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <img src="qdt-masterclass-v2.png" alt="Quantum Digital Twin Masterclass">
             <h2>Quantum Simulators and Quantum Digital Twins: The Masterclass</h2>
             <p>Join us at the National Physical Laboratory on <b></b>March 4-7, 2025</b>, at Bushy House.</p>
-            <a href="#registration">Register Now</a>
+            <a href="#registration">Registeration (closed)</a>
         </div>
     </section>
 
