--- a/index.html
+++ b/index.html
@@ -470,6 +470,7 @@
         <p>10:50 – Coffee break</p>
         <p>11:20 – Werner Dobrautz (HZDR and TU Dresden): "Reducing the Quantum Circuit Footprint for Noise-Resilient Quantum Chemistry via Transcorrelation and Adaptive Circuit Ansätze"</p>
         <p>12:00 – Pauline Besserve (QSL, Edinburgh): "Dynamical Mean-Field Theory on noisy quantum computers"</p>
+        <p>12:40 – Lunch</p>
         <p>13:40 – Alberto Baiardi (IBM Zurich): "Tensor Network-based Methods for Quantum Computing"</p>
         <p>14:20 – Nick Blunt (Riverlane): "Fault-tolerant quantum simulation of generalized Hubbard models"</p>
         <p>15:00 – Coffee break</p>
