--- a/index.html
+++ b/index.html
@@ -393,6 +393,11 @@
                     <h4>&#8226; Dr. Francois Jamet (Alice &#38; Bob, France)</h4>
                 </div>
             </div>
+            <div class="speaker">
+                <div>
+                    <h4>&#8226; Dr. Thomas Ayral (Eviden Quantum Lab, France)</h4>
+                </div>
+            </div>
         </div>
     </section>
     
@@ -475,8 +480,9 @@
         <p>14:20 – Nick Blunt (Riverlane): "Fault-tolerant quantum simulation of generalized Hubbard models"</p>
         <p>15:00 – Coffee break</p>
         <p>15:30 – P.V. Sriluckshmy (IQM)</p>
-        <p>16:10 – Eric Jones (Infleqtion): "Fault-Tolerant Operation and Materials Science with Neutral Atom Logical Qubits”</p>
-        <p>16:40 – end of the masterclass</p>
+        <p>16:10 - Thomas Ayral (Eviden)</p>
+        <p>16:40 – Eric Jones (Infleqtion): "Fault-Tolerant Operation and Materials Science with Neutral Atom Logical Qubits”</p>
+        <p>17:10 – end of the masterclass</p>
     </div>
 </div>
         </div>
